package com.ivivisoft.strategy.example;

/**
 * Created by andy on 2017/5/14.
 */
public interface Strategy {
    double calcPrice(double goodsPrice);
}
